--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,13 +1,11 @@
 // Declare @font-face rule
 
-$font-path: "assets/fonts";
-
 @font-face {
   font-family: "Scala";
   font-weight: 400;
   font-style: normal;
   font-display: swap;
-  url("$font-path/ScalaWebPro.woff") format("woff");
+  url("assets/fonts/ScalaWebPro.woff") format("woff");
 }
 
 @font-face {
@@ -15,7 +13,7 @@ $font-path: "assets/fonts";
   font-weight: 400;
   font-style: italic;
   font-display: swap;
-  url("$font-path/ScalaWebPro-Ita.woff") format("woff");
+  url("assets/fonts/ScalaWebPro-Ita.woff") format("woff");
 }
 
 @font-face {
@@ -23,7 +21,7 @@ $font-path: "assets/fonts";
   font-weight: 700;
   font-style: normal;
   font-display: swap;
-  url("$font-path/ScalaWebPro-Bold.woff") format("woff");
+  url("assets/fonts/ScalaWebPro-Bold.woff") format("woff");
 }
 
 @font-face {
@@ -31,5 +29,5 @@ $font-path: "assets/fonts";
   font-weight: 700;
   font-style: italic;
   font-display: swap;
-  url("$font-path/ScalaWebPro-BoldIta.woff") format("woff");
+  url("assets-fonts/ScalaWebPro-BoldIta.woff") format("woff");
 }
