--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,5 +1,12 @@
 // Declare @font-face rule
 
+@font-face {
+  font-family: "Scala";
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  url("assets/fonts/ScalaWebPro.woff") format("woff");
+}
 
 @font-face {
   font-family: "Scala";
