--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -5,7 +5,7 @@
   font-weight: 400;
   font-style: normal;
   font-display: swap;
-  url("assets/fonts/ScalaWebPro.woff") format("woff");
+  url: ("assets/fonts/ScalaWebPro.woff") format("woff");
 }
 
 @font-face {
@@ -13,7 +13,7 @@
   font-weight: 400;
   font-style: italic;
   font-display: swap;
-  url("assets/fonts/ScalaWebPro-Ita.woff") format("woff");
+  url: ("assets/fonts/ScalaWebPro-Ita.woff") format("woff");
 }
 
 @font-face {
@@ -21,7 +21,7 @@
   font-weight: 700;
   font-style: normal;
   font-display: swap;
-  url("assets/fonts/ScalaWebPro-Bold.woff") format("woff");
+  url: ("assets/fonts/ScalaWebPro-Bold.woff") format("woff");
 }
 
 @font-face {
@@ -29,5 +29,5 @@
   font-weight: 700;
   font-style: italic;
   font-display: swap;
-  url("assets/fonts/ScalaWebPro-BoldIta.woff") format("woff");
+  url: ("assets/fonts/ScalaWebPro-BoldIta.woff") format("woff");
 }
