--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,5 +1,7 @@
 // Declare @font-face rule
 
+@import url("https://use.typekit.net/sas6tyo.css");
+
 @font-face {
   font-family: "Scala";
   font-weight: 400;
