--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -7,7 +7,7 @@
   font-weight: 400;
   font-style: normal;
   font-display: swap;
-  url: ("{{ site.baseurl }}/assets/fonts/ScalaWebPro.woff") format("woff");
+  url: ("assets/fonts/ScalaWebPro.woff") format("woff");
 }
 
 @font-face {
@@ -15,7 +15,7 @@
   font-weight: 400;
   font-style: italic;
   font-display: swap;
-  url: ("{{ site.baseurl }}/assets/fonts/ScalaWebPro-Ita.woff") format("woff");
+  url: ("assets/fonts/ScalaWebPro-Ita.woff") format("woff");
 }
 
 @font-face {
@@ -23,7 +23,7 @@
   font-weight: 700;
   font-style: normal;
   font-display: swap;
-  url: ("{{ site.baseirl }}/assets/fonts/ScalaWebPro-Bold.woff") format("woff");
+  url: ("assets/fonts/ScalaWebPro-Bold.woff") format("woff");
 }
 
 @font-face {
@@ -31,5 +31,5 @@
   font-weight: 700;
   font-style: italic;
   font-display: swap;
-  url: ("{{ site.baseurl }}/assets/fonts/ScalaWebPro-BoldIta.woff") format("woff");
+  url: ("assets/fonts/ScalaWebPro-BoldIta.woff") format("woff");
 }
