Use absolute url for fonts file path

--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -7,7 +7,7 @@
   font-weight: 400;
   font-style: normal;
   font-display: swap;
-  url: ("assets/fonts/ScalaWebPro.woff") format("woff");
+  url: ("https://workinglibrary.github.io/assets/fonts/ScalaWebPro.woff") format("woff");
 }
 
 @font-face {
@@ -15,7 +15,7 @@
   font-weight: 400;
   font-style: italic;
   font-display: swap;
-  url: ("assets/fonts/ScalaWebPro-Ita.woff") format("woff");
+  url: ("https://workinglibrary.github.io/assets/fonts/ScalaWebPro-Ita.woff") format("woff");
 }
 
 @font-face {
