--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -1,6 +1,36 @@
 // Declare @font-face rule
 
-@import url("https://use.typekit.net/sas6tyo.css");
+@font-face {
+  font-family: "Khartiya";
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  src: url("assets/fonts/khartiya-regular-webfont.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Khartiya";
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+  src: url("assets/fonts/khartiya-italic-webfont.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Khartiya"; 
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+  src: url("assets/fonts/khartiya-bold-webfont.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Khartiya";
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+  src: url("assets/fonts/khartiya-bolditalic-webfont.woff") format("woff");
+}
 
 @font-face {
   font-family: "Scala";
