--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -4,7 +4,7 @@
 
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 1.25;
   color: var(--heading-color);
 }
@@ -26,6 +26,7 @@ h3 {
 h4, h5, h6 {
   margin-top: 1rem;
   font-size: 1rem;
+  font-style: italic;
 }
 
 p {
