--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -16,7 +16,7 @@
 .page-title,
 .post-title {
   color: var(--heading-color);
-  font-weight: italic;
+  font-weight: 400;
 }
 .page-title,
 .post-title {
