--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -4,8 +4,8 @@
 
 .container {
   max-width: 45rem;
-  padding-left: var(--spacer-2);
-  padding-right: var(--spacer-2);
+  padding-left: var(--spacer);
+  padding-right: var(--spacer);
   margin-left:  auto;
   margin-right: auto;
 }
