--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -5,7 +5,7 @@
 
 .pagination {
   display: flex;
-  margin: 0 -1.5rem var(--spacer);
+  margin: 0 -var(--spacer) var(--spacer);
   color: var(--gray-500);
   text-align: center;
 }
