--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -10,6 +10,7 @@ body {
   margin: 0;
   font-family: var(--body-font);
   font-size: var(--body-font-size);
+  font-weight: 500;
   line-height: var(--body-line-height);
   color: var(--body-color);
   background-color: var(--body-bg);
